--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@ layout: home
 search_exclude: true
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
-
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+Tad Peterson here, and welcome to my blog. My goal is to share usefull skills and knowledge that I learned the hard way so you don't have to, whether it was from my master's degree research [predicting inpatient hospital readmission using machine learning](https://github.com/tadtenacious/nrd_db_proj), or how I transitioned from a non technical background to a career in data, there should be something for everyone.
 
 # Posts
