--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="My Adventures in Data" />
 <meta property="og:description" content="My Adventures in Data" />
-<link rel="canonical" href="https://tadtenacious.github.io/tenacious-blog/" />
-<meta property="og:url" content="https://tadtenacious.github.io/tenacious-blog/" />
 <meta property="og:site_name" content="Tenacious Blog" />
 <script type="application/ld+json">
-{"description":"My Adventures in Data","@type":"WebSite","url":"https://tadtenacious.github.io/tenacious-blog/","name":"Tenacious Blog","headline":"Tenacious Blog","@context":"https://schema.org"}</script>
+{"description":"My Adventures in Data","@type":"WebSite","url":"/","name":"Tenacious Blog","headline":"Tenacious Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://tadtenacious.github.io/tenacious-blog/feed.xml" title="Tenacious Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Tenacious Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
@@ -28,15 +26,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="My Adventures in Data" />
 <meta property="og:description" content="My Adventures in Data" />
-<link rel="canonical" href="https://tadtenacious.github.io/tenacious-blog/" />
-<meta property="og:url" content="https://tadtenacious.github.io/tenacious-blog/" />
 <meta property="og:site_name" content="Tenacious Blog" />
 <script type="application/ld+json">
-{"description":"My Adventures in Data","@type":"WebSite","url":"https://tadtenacious.github.io/tenacious-blog/","name":"Tenacious Blog","headline":"Tenacious Blog","@context":"https://schema.org"}</script>
+{"description":"My Adventures in Data","@type":"WebSite","url":"/","name":"Tenacious Blog","headline":"Tenacious Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
-<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="https://tadtenacious.github.io/tenacious-blog/feed.xml" title="Tenacious Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Tenacious Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
@@ -161,7 +157,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/tadtenacious" title="tadtenacious"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/tadtenacious" title="tadtenacious"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/tadtenacious" title="tadtenacious"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/TadTenacious" title="TadTenacious"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
