--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 search_exclude: true
 ---
 
-Tad Peterson here, and welcome to my blog. My goal is to share usefull skills and knowledge that I learned the hard way so you don't have to, whether it was from my master's degree research [predicting inpatient hospital readmission using machine learning](https://github.com/tadtenacious/nrd_db_proj), or how I transitioned from a non technical background to a career in data, there should be something for everyone.
+My name is Tad Peterson, and welcome to my blog. My goal is to share usefull skills and knowledge that I learned the hard way so you don't have to, whether it was from my master's degree research [predicting inpatient hospital readmission using machine learning](https://github.com/tadtenacious/nrd_db_proj), or how I transitioned from a non technical background to a career in data, there should be something for everyone.
 
 # Posts
