deploy: a88e54393edc5c3211a0cf9285cca808f6ec7bfa

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Tad Peterson here, and welcome to my blog. My goal is to share usefull skills and knowledge that I learned the hard way so you don’t have to, whether it was from my master’s degree research <a href="https://github.com/tadtenacious/nrd_db_proj">predicting inpatient hospital readmission using machine learning</a>, or how I transitioned from a non technical background to a career in data, there should be something for everyone.</p>
+        <div class="home"><p>My name is Tad Peterson, and welcome to my blog. My goal is to share usefull skills and knowledge that I learned the hard way so you don’t have to, whether it was from my master’s degree research <a href="https://github.com/tadtenacious/nrd_db_proj">predicting inpatient hospital readmission using machine learning</a>, or how I transitioned from a non technical background to a career in data, there should be something for everyone.</p>
 
 <h1 id="posts">Posts</h1>
 
