--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="My Adventures in Data" />
 <meta property="og:site_name" content="Tenacious Blog" />
 <script type="application/ld+json">
-{"description":"My Adventures in Data","@type":"WebPage","url":"/tenacious-blog/404.html","headline":"Tenacious Blog","@context":"https://schema.org"}</script>
+{"headline":"Tenacious Blog","description":"My Adventures in Data","@type":"WebPage","url":"/tenacious-blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/tenacious-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/tenacious-blog/feed.xml" title="Tenacious Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -28,7 +28,7 @@
 <meta property="og:description" content="My Adventures in Data" />
 <meta property="og:site_name" content="Tenacious Blog" />
 <script type="application/ld+json">
-{"description":"My Adventures in Data","@type":"WebPage","url":"/tenacious-blog/404.html","headline":"Tenacious Blog","@context":"https://schema.org"}</script>
+{"headline":"Tenacious Blog","description":"My Adventures in Data","@type":"WebPage","url":"/tenacious-blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
